<resources>

    <string name="fb_id">253330645131088</string>
    <string name="app_name">Matura</string>
    <string name="title_activity_register_">Register_Activity</string>
    <string name="register_button">Registiraj Se</string>
    <string name="vec_imas_racun"><u>Već imaš račun?</u></string>
    <string name="google_prijava">Facebook Prijava</string>
    <string name="unesi_podatke">ili unesi podatke</string>
    <string name="prijava">Prijava</string>
    <string name="email">E - mail</string>
    <string name="zaporka">Zaporka</string>
    <string name="ime">Ime</string>
    <string name="registriraj_se">Registriraj se</string>
    <string name="nastavi">Nastavi</string>

    <string name="prijavaRjesavanje">Prijava i rješavanje</string>
    <string name="prijavaText">Prijavi se u aplikaciju i kreni s rješavanjem!</string>

    <string name="pripremi_se_text">Izaberi predmete koje trebaš vježbati i ispite rješavaj kada god poželiš.</string>
    <string name="pripremiHeader">Pripremi se za maturu</string>

    <string name="ostvari_text">Rješavanjem ispita penji se na ljestvici najboljih rezultata i osvoji nagrade.</string>
    <string name="ostvari_najHeader">Ostvari najbolji rezultat</string>

    <string name="drzavna_matura">Državna matura</string>

    <string name="o_app_naslov">Državna matura</string>
    <string name="o_app_text1">Mobilna aplikacija Državna matura sadržava ispitne zadatke državne mature. Zadatci su preuzeti iz ispita koje je polagalo više od 500 pristupnika i koji su provedeni u ljetnome i jesenskome roku u školskim godinama 2012./2013., 2013./2014., 2014./2015. i 2015./2016. Nacionalni centar za vanjsko vrednovanje obrazovanja (u daljnjemu tekstu: Centar) zadržava pravo dopune sadržaja ispitnih zadataka. Aplikacija nije dostupna za Androide 4.4 i starije verzije.
    U slučaju pravopisne ili sadržajne pogreške uputite komentar na podrska.ma@ncvvo.hr.
    </string>
    <string name="o_app_text2">Dokumenti, podatci i informacije objavljeni na mrežnoj stranici Centra www.ncvvo.hr i korišteni za mobilnu aplikaciju Državna matura ne smiju se objavljivati, prenositi, mijenjati, reproducirati, distribuirati, prodavati, kopirati ili na bilo koji način upotrebljavati u komercijalne svrhe bez pisanoga dopuštenja Centra. Upotrebljavaju se isključivo za individualne potrebe korisnika uz poštivanje svih autorskih i vlasničkih prava Centra. Upravljanje grafičkim, tekstualnim, programskim i ostalim sadržajima mobilne aplikacije regulirano je Zakonom o autorskim i srodnim pravima. Neovlašteno korištenje bilo kojega dijela mobilne aplikacije bez dopuštenja Centra smatra se kršenjem autorskih prava i podložno je tužbi.
    </string>

    <string name="uvjeti_text1">NCVVO ustupa pravo korištenja sadržaja provedenih ispita iz Hrvatskog jezika dostupnog na www.ncvvo.hr vlasniku aplikacije. NCVVO se ograđuje od svih možebitnih pogrešaka u aplikaciji.</string>
    <string name="ncvvo_link"><u>www.ncvvo.hr</u></string>
    <string name="title_activity_hrvatski_ispit">HrvatskiIspit</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_rjesavanje_ispita_vrste_ispita">RjesavanjeIspitaVrsteIspita</string>
    <string name="title_activity_vrste_ispita">VrsteIspita</string>

    <string name="napomena_naslov">Napomena</string>
    <string name="napomena_tekst">Neka pitanja su izbačena zbog njihove nemogućnosti ocjenjivanja.Također, pri rješavanju se boduje samo završni odgovor, a postuputak rješavanja nije dio završne ocjene. Ulaskom u ispit prihvaćaju se Uvjeti korištenja. \n
    \n Dokumenti, podatci i informacije objavljeni na mrežnoj stranici Centra www.ncvvo.hr i korišteni za mobilnu aplikaciju Državna matura ne smiju se objavljivati, prenositi, mijenjati, reproducirati, distribuirati, prodavati, kopirati ili na bilo koji način upotrebljavati u komercijalne svrhe bez pisanoga dopuštenja Centra. Upotrebljavaju se isključivo za individualne potrebe korisnika uz poštivanje svih autorskih i vlasničkih prava Centra. Upravljanje grafičkim, tekstualnim, programskim i ostalim sadržajima mobilne aplikacije regulirano je Zakonom o autorskim i srodnim pravima. Neovlašteno korištenje bilo kojega dijela mobilne aplikacije bez dopuštenja Centra smatra se kršenjem autorskih prava i podložno je tužbi.
    </string>
    <string name="formule_naslov">Formule za rješavanje</string>
    <string name="formule_tekst">Za odabrani ispit dostupne su pomoćne formule. Do njih možeš doći klikom na ikonicu koja će biti dostupna unutar ispita tijekom rješavanja.</string>

    <string name="button_nastavi">Nastavi</string>

</resources>


