<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
    tools:context="com.matura.drzavna.matura.Login">

    <Button
        android:text="@string/registriraj_se"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:id="@+id/buttonRegistrirajSe"
        android:background="@drawable/gray_button"
        android:textColor="#808080"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp" />

    <TextView
        android:text="@string/ime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp"
        android:id="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:id="@+id/editTextIme"
        android:layout_alignParentEnd="true"
        android:background="@drawable/empty_field"
        android:paddingLeft="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:id="@+id/editTextemail"
        android:layout_alignParentEnd="true"
        android:background="@drawable/empty_field"
        android:paddingLeft="20dp" />

    <TextView
        android:text="@string/zaporka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextemail"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:id="@+id/textView7" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:id="@+id/editTextZaporka"
        android:layout_alignParentEnd="true"
        android:background="@drawable/empty_field"
        android:paddingLeft="20dp" />

    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/textView6"
        android:layout_below="@+id/editTextIme"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/unesi_podatke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="56dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
