<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/prijavaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView12"
        android:layout_alignParentStart="true"
        android:id="@+id/textView13"
        android:padding="20dp"
        android:textStyle="normal"
        android:textColor="#000"
        android:textColorLink="#fff"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewPrijavi"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="108dp"
        android:background="@drawable/pirjava_rjesavanje" />

    <Button
        android:text="@string/nastavi"
        android:layout_width="match_parent"
        android:id="@+id/buttonNastavi"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#141F4B"
        android:textColorLink="#fff"
        android:textColor="#fff"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="70dp" />

    <TextView
        android:text="@string/prijavaRjesavanje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:id="@+id/textView12"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_below="@+id/imageViewPrijavi"
        android:layout_alignParentStart="true"
        android:textColor="#000" />
</RelativeLayout>