<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.matura.drzavna.matura.Login">

    <Button
        android:text="@string/prijava"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:id="@+id/buttonPrijava"
        android:background="@drawable/gray_button"
        android:textColor="#808080"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="#ddd"
        android:textSize="18sp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:background="@drawable/empty_field"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:paddingLeft="20dp" />


    <TextView
        android:text="@string/zaporka"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/editTextEmail"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editTextPassword" />


    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/unesi_podatke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:background="@drawable/empty_field"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:paddingLeft="20dp" />
</RelativeLayout>
